// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eeeoh > invalid base attributes %p 1`] = `
[Error: @seek/logger found invalid values in base attributes. Review the documentation and ensure your deployment configures these correctly.
service: expected non-empty string, received "  "]
`;

exports[`eeeoh > invalid base attributes %p 2`] = `
[Error: @seek/logger found invalid values in base attributes. Review the documentation and ensure your deployment configures these correctly.
version: expected non-empty string, received ""]
`;

exports[`eeeoh > invalid base attributes %p 3`] = `
[Error: @seek/logger found invalid values in base attributes. Review the documentation and ensure your deployment configures these correctly.
env: expected non-empty string, received undefined
version: expected non-empty string, received undefined]
`;

exports[`eeeoh > invalid base attributes %p 4`] = `
[Error: @seek/logger found invalid values in base attributes. Review the documentation and ensure your deployment configures these correctly.
env: expected non-empty string, received null
service: expected non-empty string, received null
version: expected non-empty string, received null]
`;

exports[`eeeoh > use environment: invalid environment variables %p 1`] = `
[Error: @seek/logger found invalid values in environment variables. Review the documentation and ensure your deployment configures these correctly.
DD_SERVICE: expected non-empty string, received "  "]
`;

exports[`eeeoh > use environment: invalid environment variables %p 2`] = `
[Error: @seek/logger found invalid values in environment variables. Review the documentation and ensure your deployment configures these correctly.
DD_VERSION: expected non-empty string, received ""]
`;

exports[`eeeoh > use environment: invalid environment variables %p 3`] = `
[Error: @seek/logger found invalid values in environment variables. Review the documentation and ensure your deployment configures these correctly.
DD_ENV: expected non-empty string, received undefined
DD_VERSION: expected non-empty string, received undefined]
`;
